2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/plugs_hash.c: Removed superfluous include of users.h.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/pluginload.c: Removed superfluous include of users.h.

2010-01-26  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-26  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.1 release.

	* VERSION: Set to 3.0.1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-01-26  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvas-nvt-sync.in: Flush trailing whitespaces, minor reformatting
	for more consistency.

2010-01-26  Vlatko Kosturjak <kost@linux.hr>

	* openvas-nvt-sync.in: quick merge of old script which had support
	for OpenVAS administrator and new script. In short, best of both
	worlds (scripts).

2010-01-26  Vlatko Kosturjak <kost@linux.hr>

	* openvas-nvt-sync.in: completely new version of openvas-nvt-sync,
	it passed quite a while on mailing list and nobody reported
	any serious bug (except cosmetic changes which can be contributed
	now to SVN).

2010-01-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added code for a very basic standalone synscanner based on the cnvt to
	ease debugging (e.g. IPv6 might not yet work).

	* cnvts/synscan/synscan.c: Remove undef of DEBUG macro.
	[DEBUG] (openbpf): Be very verbose.
	(scan): Instead of accessing values in arglists, accept these values as
	parameters, slighty more verbose ifdef DEBUG.
	(plugin_run): Find and pass new parameters for scan().
	[STANDALONE] (main): New. Main for the standalone synscanner.

2010-01-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* cnvts/synscan/synscan.c: More cosmetics and debug output (conditional
	on DEBUG macro).
